figured out how to load other pages. Need to style buttons to be active then start to make site look better all-around.

--- a/src/components/Nav/App.css
+++ b/src/components/Nav/App.css
@@ -5,3 +5,17 @@
     background-color: black;
     color: white;
 }
+
+
+
+li {
+    color: white;
+    margin: 0 0.8rem;
+    font-size: 1.3rem;
+    list-style: none;
+    text-decoration: none;
+}
+
+.Logo {
+    color: white
+}
